--- a/templates/detailsproduct/_entry.twig
+++ b/templates/detailsproduct/_entry.twig
@@ -21,7 +21,7 @@
 
         <div>
         <H1>{{entry.title}}</H1>
-        <p>{{entry.price}}</p>
+        <p> € {{entry.price}}</p>
         <p class="colorway">{{entry.colorway}}</p>
         <h2>Details</h2>
         <p>{{entry.details}}.</p>
